temp fix on Kudos for internal stuff. will revert next week. Styling issue on IE9

--- a/app/assets/stylesheets/light.css
+++ b/app/assets/stylesheets/light.css
@@ -14,4 +14,10 @@ body {
     background-image: url("/assets/images/logo.gif");
     background-repeat-x: no-repeat;
     background-repeat-y: no-repeat;
+    background-repeat: no-repeat;
+}
+
+.img-responsive{
+    width:100%;
+    max-width:100%
 }
